<resources>
    <string name="app_name">tripguruapp</string>
    <string name="logo_description" translatable="false">Tripguru\'s Logo</string>
    <string name="username_hint" translatable="false">Username</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="avatar_button_label">Avatar</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="already_registered_label">Already Registered? Click here</string>
    <string name="login_button_label">Login</string>
    <string name="forgot_password_label">Forgot your password?</string>
    <string name="sign_up_label">Create an account here</string>
    <string name="editlocal_button_label">Update Local</string>
    <string name="createlocal_button_label">Create Local</string>
    <string name="edittrip_button_label">Update Trip</string>
    <string name="createtrip_button_label">Create Trip</string>
    <string name="deletetrip_button_label">Delete Trip</string>
    <string name="nametrip_label">Trip Name</string>
    <string name="hometext_label">Manage your trips here.</string>
    <string name="hometitle_label">Hello</string>
    <string name="yourlocals_label">Your Locals</string>
    <string name="triplocals_label">Trip Locals</string>
    <string name="saveprofile_label">Save Profile Changes</string>
    <string name="profilename_label">Profile Name</string>
    <string name="profile_label">Profile</string>
    <string name="yourtrips_label">Your Trips</string>
    <string name="signout_label">Sign Out</string>
    <string name="description_hint">Description</string>
    <string name="name_hint">Name</string>
    <string name="descriptiontrip_label">Description of Trip</string>
    <string name="descriptionlocal_label">Description of Local</string>
    <string name="namelocal_label">Name of Local</string>
    <string name="deletelocal_button_label">Delete Local</string>
    <string name="passwordnotidentical_label">Passwords are not identical</string>
    <string name="emptyfields_label">There are empty fields</string>
    <string name="changessuccess_label">Changes Saved</string>
    <string name="notauth_label">Not Authorized</string>
    <string name="error_label">Error</string>
    <string name="notripselected_label">Without trips selected</string>
    <string name="nointernet_label">Disconnected from Internet</string>
    <string name="yesinternet_label">Connected to Internet</string>
    <string name="loading_label">Loading...</string>
    <string name="error_fetching_data_label">Error fetching data</string>
    <string name="loginsuccess_label">Logged</string>
    <string name="noavatar_label">Without Avatar Selected</string>
    <string name="successdeletelocal_label">Local Deleted Successfully</string>
    <string name="successdeletetrip_label">Trip Deleted Successfully</string>
    <string name="successtrip_label">Trip Saved Successfully</string>
    <string name="successlocal_label">Local Saved Successfully</string>
    <string name="avatar_selected_label">Avatar Selected</string>
    <string name="image_selected_label">Image Selected</string>
    <string name="sharedwith_label">"Shared with: "</string>
    <string name="successsharetrip_label">Shared Users Updated</string>
    <string name="searchlocals_label">Search New Locals</string>
    <string name="startdate_label">Start Date</string>
    <string name="enddate_label">End Date</string>
    <string name="from_label">From</string>
    <string name="to_label">to</string>
    <string name="emptyemail_label">Insert your email</string>
</resources>