<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.fragments.TripFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="35dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center" />

            <!-- Trip Name TextView -->
            <TextView
                android:id="@+id/textViewTripName"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nametrip_label"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginBottom="15dp">

                <Button
                    style="@style/GuruButton"
                    android:id="@+id/buttonEditTripPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:maxWidth="100dp"
                    android:text="@string/edittrip_button_label" />


                <Button
                    style="@style/GuruButton"
                    android:id="@+id/buttonCreateLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:maxWidth="100dp"
                    android:text="@string/createlocal_button_label" />

                <Button
                    style="@style/GuruButton"
                    android:id="@+id/buttonDeleteTrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/colorError"
                    android:maxWidth="100dp"
                    android:text="@string/deletetrip_button_label" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewShareTrip"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Share Trip"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textViewOwners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Shared with:"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/editTextShareTrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/username_hint"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/buttonShareTrip" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                android:weightSum="3"
                android:layout_marginBottom="15dp">

                <Button
                    style="@style/GuruButton"
                    android:id="@+id/buttonShareTrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/buttonRemoveShareTrip"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Share"
                    android:layout_marginEnd="10dp" />

                <Button
                    style="@style/GuruButton"
                    android:id="@+id/buttonRemoveShareTrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Remove"
                    android:backgroundTint="@color/colorError"
                    android:layout_marginEnd="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewTripLocals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/triplocals_label"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewVertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
